--- a/tasks.org
+++ b/tasks.org
@@ -11,17 +11,20 @@
 :PROPERTIES:
 :CATEGORY: BOOK
 :END:
-** TODO [#A] CSAPP[0%]                                          :@Dormitory: 
+** TODO [#A] CSAPP[0%]                                         :@Dormitoryc: 
 :LOGBOOK:
+CLOCK: [2016-03-12 Sat 22:32]--[2016-03-12 Sat 22:34] =>  0:02
+CLOCK: [2016-03-12 Sat 22:07]--[2016-03-12 Sat 22:32] =>  0:25
+CLOCK: [2016-03-12 Sat 21:34]--[2016-03-12 Sat 22:00] =>  0:26
 CLOCK: [2016-03-09 Wed 21:35]--[2016-03-09 Wed 22:00] =>  0:25
 CLOCK: [2016-03-09 Wed 20:57]--[2016-03-09 Wed 21:22] =>  0:25
 CLOCK: [2016-03-08 Tue 19:50]--[2016-03-08 Tue 20:19] =>  0:29
 CLOCK: [2016-03-08 Tue 19:19]--[2016-03-08 Tue 19:44] =>  0:25
 :END:
-1. [ ] A Tour of Computer Systems[10%]
+1. [ ] A Tour of Computer Systems[0%]
 SCHEDULED: <2016-03-08 Tue> DEADLINE: <2016-05-07 Sat>
 - State "TODO"       from              [2016-03-07 Mon 20:30]
-** TODO [#A]计算机网络-自顶向下方法[100%]                       :@Classroom:
+** TODO [#A]计算机网络-自顶向下方法[%]                          :@Classroom:
 :LOGBOOK:
 CLOCK: [2016-03-11 Fri 20:46]--[2016-03-11 Fri 21:11] =>  0:25
 CLOCK: [2016-03-10 Thu 15.15]--[2016-03-10 Thu 4:00] =>  4:00
@@ -29,7 +32,7 @@ CLOCK: [2016-03-09 Wed 10:00]--[2016-03-09 Wed 11:30] =>  1:30
 CLOCK: [2016-03-08 Tue 22:17]--[2016-03-08 Tue 22:42] =>  0:25
 :END:
 - [X] Browse website
-- [ ] 计算机网络和因特网
+- [  ] 计算机网络和因特网
   - [X] Use Traceroute
 DEADLINE: <2016-05-07 Sat> SCHEDULED: <2016-03-07 Mon>
 - State "TODO"       from              [2016-03-07 Mon 21:18]
@@ -82,11 +85,12 @@ CLOCK: [2016-03-09 Wed 18:30]--[2016-03-09 Wed 20:00] =>  1:30
 :END:
 - State "TODO"       from              [2016-03-07 Mon 21:58]
 how to : read book
-** TODO [#A] Play Guitar                                             :@309:
-SCHEDULED: <2016-03-12 Sat .+1d>
+r** TODO [#A] Play Guitar                                             :@309:
+SCHEDULED: <2016-03-13 Sun .+1d>
 :PROPERTIES:
-:LAST_REPEAT: [2016-03-11 Fri 20:29]
+:LAST_REPEAT: [2016-03-12 Sat 17:52]
 :END:
+- State "DONE"       from "TODO"       [2016-03-12 Sat 17:52]
 - State "DONE"       from "TODO"       [2016-03-11 Fri 20:29]
 - State "DONE"       from "TODO"       [2016-03-10 Thu 18:27]
 - State "DONE"       from "TODO"       [2016-03-09 Wed 21:25]
