--- a/words.org
+++ b/words.org
@@ -321,3 +321,54 @@ asterisks 星号
 coincidental 巧合的
 observe 观察
 expand 展开
+constructing 构造
+representation 表现
+evaluation 评价
+instance 实例
+extensive 大量的
+astronomical  天文数字
+observations  观察值
+empirical 实验上的
+planetary 行星
+motion 运动
+obtain 获得
+consequence 结果;推论
+wholly 完全的
+consortium 联盟
+devise 设计
+repertoire 计算机指令系统
+ranging 排列
+alternative 供选择
+incompatible 不相容
+identical 完全相同
+seldom 很少
+perspective 观点;透视
+auxiliary 辅助的
+perhaps 猜想
+maintianed 维护
+aid 援助
+denote 表示
+symbol 符号
+vice versa 反之亦然
+thesis 论文
+relay 继电器
+extend 扩展
+respective 分别的
+properties 性能;道具;内容
+rearrange 重新排列
+intersection 交集
+practical 实用
+signal 信号
+specifying 说明
+mask 掩饰
+bit-wise 位操作
+evaluation 评估
+claim 声称;要求
+merely 仅仅
+intellectual 智慧的
+amusement 乐趣
+in turn 轮流
+springboard 跳板;出发点
+mechanics 力学
+regularities 规律
+spectra光谱
