--- a/tasks.org
+++ b/tasks.org
@@ -102,25 +102,28 @@ CLOCK: [2016-03-08 Tue 20:39]--[2016-03-08 Tue 21:05] =>  0:26
 ** TODO [#C]水彩画                                             :@Dormitory:
 SCHEDULED: <2016-03-07 Mon>
 - State "TODO"       from              [2016-03-07 Mon 21:34]
-** TODO [#A] 数据库[0%]                                        :@Dormitory:
+** TODO [#A] 数据库[0%]                                         :@Dormitory:
 - [ ] Browse Website
-1. [ ] 数据系统世界
-   - [ ] READ PAPER
-2. [ ] 关系数据模型
-   - [ ] READ PAPER
-   - [ ] DO 2.4.14 and 2.5.5
-3. [ ] 关系数据库设计理论
-4. [ ] 高级数据库模型
-5. [ ]代数和逻辑查询语言 
-6. [ ] 数据库语言 SQL
-7. [ ] 约束与触发器
-8. [ ] 视图与索引
-9. [ ] 服务器环境下的 SQL
-10. [ ] 关系数据库的新课题
-11. [ ] 半结构化数据模型
-12. [ ] XML 程序设计语言
+- [ ] 数据系统世界
+  - [ ] READ PAPER
+- [ ] 关系数据模型
+  - [ ] READ PAPER
+  - [ ] Do 2.4.14 and 2.5.5
+- [ ] 关系数据库设计理论
+  - [ ]Do 3.14 3.29
+  - [ ] Learn Boyce-Codd 范式
+- [ ] 高级数据库模型
+- [ ]代数和逻辑查询语言 
+- [ ] 数据库语言 SQL
+- [ ] 约束与触发器
+- [ ] 视图与索引
+- [ ] 服务器环境下的 SQL
+- [ ] 关系数据库的新课题
+- [ ] 半结构化数据模型
+- [ ] XML 程序设计语言
 DEADLINE: <2016-05-07 Sat> SCHEDULED: <2016-03-07 Mon>
 :LOGBOOK:
+CLOCK: [2016-03-17 Thu 10:00]--[2016-03-17 Thu 11:20] =>  1:20
 CLOCK: [2016-03-10 Thu 10:00]--[2016-03-10 Thu 11:30] =>  1:30
 CLOCK: [2016-03-09 Wed 13:30]--[2016-03-09 Wed 15:00] =>  1:30
 :END:
@@ -154,6 +157,11 @@ CLOCK: [2016-03-15 Tue 10:30]--[2016-03-15 Tue 11:00] =>  0:30
 :END:
 ** TODO [#A] 数字音视频 PPT                                      :@Computer:
 DEADLINE: <2016-03-21 Mon> SCHEDULED: <2016-03-09 Wed>
+** TODO [#A] 数据库                                             :@Computer:
+DEADLINE: <2016-03-24 Thu> SCHEDULED: <2016-03-17 Thu>
+- [ ] P43 17,18,19,22(1)(2)
+- [ ] Install Oracle
+- [ ] 上机实验 1.2.3 地点:1 教 1 楼
 * Art
 :PROPERTIES:
 :CATEGORY: ART
@@ -257,3 +265,4 @@ CLOCK: [2016-03-16 Wed 21:20]--[2016-03-16 Wed 21:55] =>  0:35
 13. [ ] Sequential Data
 14. [ ] Combining Models
 DEADLINE: <2016-09-09 Fri> SCHEDULED: <2016-03-09 Wed>
+
