--- a/tasks.org
+++ b/tasks.org
@@ -7,23 +7,25 @@
 #+PROPERTY: Effort_ALL 0 0:10 0:20 0:30 1:00 2:00 3:00 4:00 8:00
 #+SEQ_TODO: TODO(t) STARTED(s) WAITING(w) APPT(a) | DONE(d) CANCELLED(c) DEFERRED(f)
 #+BEGIN: clocktable :maxlevel 2 :scope file
-#+CAPTION: Clock summary at [2016-03-18 Fri 18:35]
-| Headline                                 |      Time |      |
-|------------------------------------------+-----------+------|
-| *Total time*                             | *1d 0:14* |      |
-|------------------------------------------+-----------+------|
-| BOOK                                     |     12:18 |      |
-| \_  TODO [#A]计算机网络-自顶向下方法[0%] |           | 4:45 |
-| \_  TODO [#B] 纽约摄影教程[5%]           |           | 2:00 |
-| \_  TODO [#C] 国际象棋                   |           | 0:26 |
-| \_  TODO [#A] 数据库[0%]                 |           | 4:20 |
-| \_  TODO [#B] Learn Emacs Lisp[0%]       |           | 0:30 |
-| \_  TODO [#A] 现代操作系统               |           | 0:17 |
-| Art                                      |      1:30 |      |
-| \_  TODO [#B] Music Theory               |           | 1:30 |
-| Daily                                    |     10:26 |      |
-| \_  TODO [#A] CSAPP[8%]                  |           | 9:33 |
-| \_  TODO [#A] READ PRML[0%]              |           | 0:53 |
+#+CAPTION: Clock summary at [2016-03-21 Mon 22:39]
+| Headline                                 |      Time |       |
+|------------------------------------------+-----------+-------|
+| *Total time*                             | *1d 2:44* |       |
+|------------------------------------------+-----------+-------|
+| BOOK                                     |     12:18 |       |
+| \_  TODO [#A]计算机网络-自顶向下方法[0%] |           |  4:45 |
+| \_  TODO [#B] 纽约摄影教程[5%]           |           |  2:00 |
+| \_  TODO [#C] 国际象棋                   |           |  0:26 |
+| \_  TODO [#A] 数据库[0%]                 |           |  4:20 |
+| \_  TODO [#B] Learn Emacs Lisp[0%]       |           |  0:30 |
+| \_  TODO [#A] 现代操作系统               |           |  0:17 |
+| Homework                                 |      0:18 |       |
+| \_  TODO [#A] Read English...            |           |  0:18 |
+| Art                                      |      1:30 |       |
+| \_  TODO [#B] Music Theory               |           |  1:30 |
+| Daily                                    |     12:38 |       |
+| \_  TODO [#A] CSAPP[8%]                  |           | 10:24 |
+| \_  TODO [#A] READ PRML[0%]              |           |  2:14 |
 #+END:
 *  BOOK                                                               :@Book:
 :PROPERTIES:
@@ -163,10 +165,25 @@ CLOCK: [2016-03-18 Fri 18:18]--[2016-03-18 Fri 18:35] =>  0:17
 :PROPERTIES:
 :CATEGORY: HOMEWORK
 :END:
-** TODO [#A] 数字音视频 PPT                                      :@Computer:
-DEADLINE: <2016-03-21 Mon> SCHEDULED: <2016-03-09 Wed>
 ** TODO [#A] PS                                                 :@Computer:
 DEADLINE: <2016-03-24 Thu> SCHEDULED: <2016-03-18 Fri>
+** TODO [#A] Read English material<2016-03-14 Mon .+1w>          :@Computer:
+:PROPERTIES:
+:ARCHIVE_TIME: 2016-03-14 Mon 19:47
+:ARCHIVE_FILE: ~/GTD/tasks.org
+:ARCHIVE_OLPATH: Daily
+:ARCHIVE_CATEGORY: tasks
+:ARCHIVE_TODO: DONE
+:END:
+:LOGBOOK:
+CLOCK: [2016-03-14 Mon 19:29]--[2016-03-14 Mon 19:47] =>  0:18
+:END:
+- [ ] "Prologue" part and Part Two (P23-36)
+** TODO [#A] 操作系统                                           :@Computer:
+- [ ] 读者-写者: 写一;读多;写优先
+- [ ] P95 12-18 except 16
+- [ ] 空盘 爸放 儿桔 女苹
+DEADLINE: <2016-04-04 Mon>
 * Art
 :PROPERTIES:
 :CATEGORY: ART
@@ -178,10 +195,6 @@ CLOCK: [2016-03-09 Wed 18:30]--[2016-03-09 Wed 20:00] =>  1:30
 :END:
 - State "TODO"       from              [2016-03-07 Mon 21:58]
 how to : read book
-* Study 
-:PROPERTIES:
-:CATEGORY: Study
-:END::
 * Things
 :PROPERTIES:
 :CATEGORY: Things
@@ -189,9 +202,12 @@ how to : read book
 ** TODO [#A] My website<2016-03-10 Thu>                         :@Computer:
 ** TODO [#A] Use Emacs to develop C/C++<2016-03-15 Tue>          :@Computer:
 ** TODO [#A] Emacs MySql    <2016-03-17 Thu>                     :@Computer:
+** TODO [#A] 进程和线程       <2016-03-21 Mon>                   :@Computer:
 * Daily                                                              :@Daily:
 ** TODO [#A] CSAPP[8%]                                   :@Book:@Dormitoryc:
 :LOGBOOK:
+CLOCK: [2016-03-21 Mon 20:40]--[2016-03-21 Mon 21:07] =>  0:27
+CLOCK: [2016-03-19 Sat 11:00]--[2016-03-19 Sat 11:24] =>  0:24
 CLOCK: [2016-03-18 Fri 17:55]--[2016-03-18 Fri 18:09] =>  0:14
 CLOCK: [2016-03-18 Fri 16:10]--[2016-03-18 Fri 16:21] =>  0:11
 CLOCK: [2016-03-18 Fri 14:58]--[2016-03-18 Fri 15:36] =>  0:38
@@ -227,10 +243,11 @@ CLOCK: [2016-03-08 Tue 19:19]--[2016-03-08 Tue 19:44] =>  0:25
 12. [ ] Concurrent Programming
 SCHEDULED: <2016-03-08 Tue> DEADLINE: <2016-05-07 Sat>
 ** TODO [#A] Play Guitar                                             :@309:
-SCHEDULED: <2016-03-19 Sat .+1d>
+SCHEDULED: <2016-03-22 Tue .+1d>
 :PROPERTIES:
-:LAST_REPEAT: [2016-03-18 Fri 18:16]
+:LAST_REPEAT: [2016-03-21 Mon 20:40]
 :END:
+- State "DONE"       from "TODO"       [2016-03-21 Mon 20:40]
 - State "DONE"       from "TODO"       [2016-03-18 Fri 18:16]
 - State "DONE"       from "TODO"       [2016-03-16 Wed 09:45]
 - State "DONE"       from "TODO"       [2016-03-15 Tue 14:23]
@@ -257,6 +274,8 @@ SCHEDULED: <2016-04-13 Wed>
 *** TODO [#B] Learn Kaggle                                      :@Computer:
 ** TODO [#A] READ PRML[0%]                               :@Book:@Dormitory:
 :LOGBOOK:
+CLOCK: [2016-03-21 Mon 21:47]--[2016-03-21 Mon 22:39] =>  0:52
+CLOCK: [2016-03-19 Sat 11:50]--[2016-03-19 Sat 12:19] =>  0:29
 CLOCK: [2016-03-16 Wed 22:04]--[2016-03-16 Wed 22:22] =>  0:18
 CLOCK: [2016-03-16 Wed 21:20]--[2016-03-16 Wed 21:55] =>  0:35
 :END:
